# SimpleReverb

./: CMakeLists.txt  README.md
src/: CustomTheme.cpp  CustomTheme.h  NameLabel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RotarySlider.cpp  RotarySlider.h
